*Version 2.0.7*

* Change PointValues and PointValueAnnotations tables to InnoDB in MySQL
* Fixed missing graphic when using Serial Port Widget
* Upgraded Dojo frontend library to 1.9.1, added DGrid tables and local use of scripts instead of from CDN
* Data Source View upgraded to use filtered and sortable tables


*Version 2.0.6*

* Input stream ePoll moved from static reference to Provider runtime reference
* Changed var names of module script and styles, and added module JSP fragments.
* Enhanced servlet hook that allows multiple URI mappings to a single servlet.
* Created flag that indicates a newly installed instance so that modules can handle the condition.
* New module hooks to allow redirection based upon new instance, first user login, login, not logged in.
* Added load order attribute to module to determine the order in which modules are loaded.
* Added HostUtils for modules to be able to discover details about the host platform.
* Added milliseconds to point history download CSV files.
* Added close button to point details editing panel.
* Display the point details beside the line in the point list when editing to avoid having to scroll.
* Allow modules to open the system setting to a specific section.
* In module builds: create the lib dir if not present, copy scripts to bin dir, pre-compile JSPs and tags, and added copy-web target for development purposes.
* Added optional visibility to menu/toolbar items.
* Removed domain name from license
* Improved point hierarchy behaviour
* Rearranged home url management, and added ability to clear home url
* Fixed firing of point hierarchy clearing notification
* Improved failover in configuration importing, and made output clearer by using different styles for error messages
* Added "pre-home" category to default pages definition
* Fixed potential race conditions in loading of cached definitions in module registry
* Removed hard-coding of menu items in toolbar so they can be managed more dynamically