@@ -3,7 +3,9 @@
 * Change PointValues and PointValueAnnotations tables to InnoDB in MySQL
 * Fixed missing graphic when using Serial Port Widget
 * Upgraded Dojo frontend library to 1.9.1, added DGrid tables and local use of scripts instead of from CDN
+* Legacy Dojo Module will break this core, remove the DOJO Module if installed.
 * Data Source View upgraded to use filtered and sortable tables
+* Ability to download chart data as XLSX file and CSV, XLSX file can be used to import data via the Point Data Import module
 
 
 *Version 2.0.6*
